# mini-deepResearch

./: .env.example  .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  example.py  main.py  main_langchain.py  pyproject.toml  requirements.txt  test_api.py  test_setup.py  从零到一快速实现Mini DeepResearch.md
.claude/: settings.local.json
research_reports/: 关于AI在教育中的应用调研报告.md  关于MCP_(Model_Context_Protocol)_技术详解调研报告.md
