[project]
name = "mini-deepresearch"
version = "0.2.0"
description = "基于LangChain的自动化研究助手，适配阿里云通义千问，自动规划搜索并生成研究报告"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "ddgs>=9.0.0",
]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["ai", "research", "openai", "agents", "deepresearch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
